codepkg/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employeers</relationshipLabel>
        <relationshipName>Employeers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_manager__c</fullName>
        <label>Email manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>&quot;NoFirstName&quot;</defaultValue>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employeers</relationshipLabel>
        <relationshipName>Employeers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Junior</fullName>
                    <default>true</default>
                    <label>Junior</label>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Seniour</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Cheff</fullName>
                </value>
                <value>
                    <fullName>System Architectoure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taks__c</fullName>
        <formula>Salary__c * 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cloud</label>
    </listViews>
    <listViews>
        <fullName>Java</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Java</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Developer</fullName>
        <active>true</active>
        <label>Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA</fullName>
        <active>true</active>
        <label>QA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MaxSalary</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c &gt; 1500</errorConditionFormula>
        <errorMessage>Salary &gt; 1500</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinSalary</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c &lt; 300</errorConditionFormula>
        <errorMessage>Salary &lt; 300</errorMessage>
    </validationRules>
</CustomObject>